--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <div id="calculator-buttons" class="calculator_buttons">
             <div class="calculator_button calculator_button-long">C</div>
             <div class="calculator_button">%</div>
-            <div class="calculator_button calculator_button-purple operator">/</div>
+            <div class="calculator_button  operator">/</div>
             <div class="calculator_button number">7</div>
             <div class="calculator_button number">8</div>
             <div class="calculator_button number">9</div>
-            <div class="calculator_button calculator_button-purple operator">*</div>
+            <div class="calculator_button  operator">*</div>
             <div class="calculator_button number">4</div>
             <div class="calculator_button number">5</div>
             <div class="calculator_button number">6</div>
-            <div class="calculator_button calculator_button-purple operator">-</div>
+            <div class="calculator_button  operator">-</div>
             <div class="calculator_button number">1</div>
             <div class="calculator_button number">2</div>
             <div class="calculator_button number">3</div>
-            <div class="calculator_button calculator_button-purple operator">+</div>
+            <div class="calculator_button  operator">+</div>
             <div class="calculator_button calculator_button-long number">0</div>
             <div class="calculator_button">.</div>
-            <div class="calculator_button calculator_button-orange">=</div>
+            <div class="calculator_button">=</div>
         </div>
     </div>
 </body>
